# Stock-Assistant-Agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: agent_manager.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  stock_assistant.db  store.py  tool_utils.py
backend/routers/: auth.py  chat.py  stocks.py  watchlist.py
backend/services/: auth_service.py  chat_service.py  stock_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  chat.js  client.js  stocks.js  watchlist.js
frontend/src/components/auth/: LoginForm.jsx  ProtectedRoute.jsx  RegisterForm.jsx
frontend/src/components/chat/: ChatBubble.jsx  ChatInput.jsx  ChatMessages.jsx  ChatPanel.jsx  ToolIndicator.jsx
frontend/src/components/layout/: DashboardLayout.jsx  TopBar.jsx
frontend/src/components/stock/: CenterContent.jsx  FinancialTable.jsx  FinancialTabs.jsx  NewsCard.jsx  NewsSection.jsx  StockQuoteHeader.jsx  TradingViewWidget.jsx
frontend/src/components/ui/: Avatar.jsx  Button.jsx  EmptyState.jsx  Input.jsx  (+3 more)
frontend/src/contexts/: AuthContext.jsx  StockContext.jsx
frontend/src/hooks/: useDarkMode.js  useResizable.js  useStockData.js  useWatchlist.js  useWebSocket.js
frontend/src/pages/: DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx
frontend/src/utils/: constants.js  format.js  token.js
src/: agent.py  style.css  utils.py
(+3 files in other folders)
