[project]
name = "stock-assistance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "langchain-mcp-adapters>=0.1.7",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.45.1",
    "groq==0.26.0",
]
